# Quotes_to_scape_Django

./: README.md
Django_project/: pyproject.toml
Django_project/quotes/: authors.json  fill.py  fill_db.py  quotes.json
Django_project/quotes/quotes/: settings.py  urls.py
Django_project/quotes/quotesapp/: admin.py  models.py  urls.py  views.py
Django_project/quotes/quotesapp/migrations/: 0001_initial.py
Django_project/quotes/quotesapp/templates/quoteapp/: author.html  author_detail.html  base.html  index.html  quote.html  tag.html
Django_project/quotes/users/: forms.py  urls.py  views.py
Django_project/quotes/users/migrations/: 0001_initial.py
Django_project/quotes/users/templates/users/: signup.html
